@pply global css day2

--- a/aulas/web/src/global.css
+++ b/aulas/web/src/global.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    @apply bg-[#09090A] text-zinc-100
+}
+
 
 /** .button {
     @apply bg-slate-400 p-2 h-10 rounded
